--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -1,4 +1,20 @@
 
 body {
-    background-color: blueviolet;
+    background-image: linear-gradient(90deg, #000428, #004e92);
+}
+
+.navbutton {
+    color: white;
+    text-align: center;
+    background-color: transparent;
+    font-size: 40px;
+    padding: 14px 40px;
+    border-left-color: white;
+    border-top-color: white;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+}
+
+.navbutton :hover {
+    transform: scale(1.5);
 }
