--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -1,20 +1,25 @@
 
 body {
-    background-image: linear-gradient(90deg, #000428, #004e92);
+    background-image: linear-gradient(90deg, #9796f0, #fbc7d4);
+    font-family: 'Raleway', sans-serif;
 }
 
 .navbutton {
     color: white;
     text-align: center;
     background-color: transparent;
-    font-size: 40px;
+    font-size: 30px;
+    margin-top: 50px;
+    margin-bottom: 15px;
+    margin-left: 50px;
     padding: 14px 40px;
     border-left-color: white;
     border-top-color: white;
     border-right-color: transparent;
     border-bottom-color: transparent;
+    transition: transform .2s;
 }
 
-.navbutton :hover {
+.navbutton:hover {
     transform: scale(1.5);
 }
