--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -1,6 +1,7 @@
 
 body {
-    background-image: linear-gradient(90deg, #9796f0, #fbc7d4);
+    background-image: image(background-pink-wall);
+    background-position: center;
     font-family: 'Raleway', sans-serif;
 }
 
