--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -1,8 +1,13 @@
 
 body {
-    background-image: image(background-pink-wall);
+    background-image: image("Images\sparkles.jpg");
+    background-color: gray;
     background-position: center;
     font-family: 'Raleway', sans-serif;
+}
+
+#navigation {
+    text-align: center;
 }
 
 .navbutton {
@@ -11,9 +16,9 @@ body {
     background-color: transparent;
     font-size: 30px;
     margin-top: 50px;
-    margin-bottom: 15px;
-    margin-left: 50px;
-    padding: 14px 40px;
+    margin-bottom: 30px;
+    margin-left: 100px;
+    padding: 20px 80px;
     border-left-color: white;
     border-top-color: white;
     border-right-color: transparent;
@@ -22,5 +27,20 @@ body {
 }
 
 .navbutton:hover {
-    transform: scale(1.5);
+    transform: scale(1.3);
 }
+
+a.kontakti:link {
+    color: white;
+}
+
+a.kontakti:visited {
+    color: red;
+  }
+
+  a.kontakti:hover {
+    border-bottom: 1px solid;     
+    background: white;
+    color: black;
+  }
+
