--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -1,48 +1,101 @@
 
 body {
-    background: linear-gradient(#d9a7c7, #fffcdc);
-    background-color: gray;
+    background-image: url("images/stars2.jpg");
+    background-size: 100% 100%;
     background-position: center;
     font-family: 'Raleway', sans-serif;
     line-height: 1.8;
+    color: white;
+
 }
 
 #navigation {
     text-align: center;
+
 }
 
 .navbutton {
-    color: black;
-    text-align: center;
+    color: white;
     background-color: transparent;
-    font-size: 25px;
+    font-size: 20px;
     letter-spacing: 5px;
     margin-top: 50px;
     margin-bottom: 30px;
     margin-left: 100px;
     padding: 10px 50px;
-    border-left-color: black;
-    border-top-color: black;
+    border-left-color: white;
+    border-top-color: white;
     border-right-color: transparent;
     border-bottom-color: transparent;
     transition: transform .2s;
+    text-shadow: 0 0 45px;
+}
+
+.divider{
+    width:autopx;
+    height:auto;
+    display:inline-block;
 }
 
 .navbutton:hover {
     transform: scale(1.3);
 }
 
-a.kontakti:link {
+#vairak-info {
+    font-size: 30px;
+}
+
+a#vairak-info:link {
     color: white;
 }
 
-a.kontakti:visited {
-    color: red;
+a#vairak-info:visited {
+    color:white;
   }
 
-  a.kontakti:hover {
+  a#vairak-info:hover {
     border-bottom: 1px solid;     
     background: white;
     color: black;
   }
 
+  h1{
+      font-family: 'Montserrat', sans-serif;
+      font-weight: bold;
+      text-align: center;
+      font-size: 40px;
+      margin-top: 100px;
+      text-shadow: 0 0 45px;
+      
+  }
+
+  #autors {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: lighter;
+    text-align: right;
+    font-size: 15px;
+    margin-bottom: 40px;
+    margin-right: 150px;
+    text-shadow: 0 0 45px;
+
+      }
+
+.sadalu-bildes {
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 50% 10% / 10% 80%;
+        border: 4px solid #e4a8c2;
+        margin-left: 30px;
+        margin-right: 30px;
+        float: left;
+
+
+}
+
+.hederi {
+    text-align: center;
+    text-decoration: underline;
+    font-size: 30px;
+    font-weight: lighter;
+}
