--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url("images/stars2.jpg");
+    background-image: url("Images/stars2.jpg");
     background-size: 100% 100%;
     background-position: center;
     font-family: 'Raleway', sans-serif;
