--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -89,7 +89,7 @@ h1{
         height: 200px;
         object-fit: cover;
         border-radius: 50% 10% / 10% 80%;
-        border: 4px solid #e4a8c2;
+        border: 4px solid #ffffff;
         margin-left: 30px;
         margin-right: 30px;
         float: left;
