--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -9,7 +9,7 @@ body {
 
 }
 
-main {
+#landing {
     height: 100vh;
 }
 
@@ -115,6 +115,35 @@ h1{
   
 }
 
-.footer {
+#vairak-par-zvaigznem {
     text-align: center; 
+    background-color: #2b2b2bcf;
+     margin-left: 350px;
+    margin-right: 350px;
 }
+
+footer {
+    text-align: right;
+    font-size: 10px;
+    margin-right: 30px;    
+}
+
+#img-uz-sakumu {
+    height: 50px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+	transform: scale(1);
+	animation: pulse 1.5s infinite;
+}
+
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.5);
+	}
+
+
+	100% {
+		transform: scale(0.95);
+	}
