--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -18,31 +18,37 @@ body {
 
 }
 
-.navbutton {
+
+.navbutton2 {
+	background-color: transparent;
+    border: 2px solid;
     color: white;
-    background-color: transparent;
-    font-size: 20px;
-    letter-spacing: 5px;
-    margin-top: 50px;
-    margin-bottom: 30px;
-    margin-left: 80px;
-    padding: 10px 50px;
     border-left-color: white;
     border-top-color: white;
     border-right-color: transparent;
     border-bottom-color: transparent;
+    padding: 10px 50px;
+    text-align: center;
+    display: inline-block;
+    font-size: 20px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    cursor: pointer;
     transition: transform .2s;
-    text-shadow: 0 0 45px;
+    text-shadow: 10px  10px 45px;
+
 }
 
-.divider{
-    width:autopx;
-    height:auto;
-    display:inline-block;
-}
-
-.navbutton:hover {
+.navbutton2:hover {
     transform: scale(1.3);
+}
+
+#poga-apraksts {
+    margin-right: 100px;
+}
+
+#poga-muzs {
+    margin-left: 100px;
 }
 
 #vairak-info {
