--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -128,8 +128,11 @@ li {
 #vairak-par-zvaigznem {
     text-align: center; 
     background-color: #2b2b2bcf;
-     margin-left: 350px;
+    margin-left: 350px;
     margin-right: 350px;
+    margin-top: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 footer {
@@ -157,3 +160,10 @@ footer {
 	100% {
 		transform: scale(0.95);
 	}
+
+
+@media screen and (max-width: 950px) {
+        .navbutton2 {
+          display: block;
+        }
+      }
