--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -7,6 +7,7 @@ body {
     line-height: 1.8;
     color: white;
 
+
 }
 
 #landing {
@@ -77,6 +78,8 @@ h1{
       font-size: 40px;
       margin-top: 100px;
       text-shadow: 1px 10px 45px;
+      margin-right: 20px;
+      margin-left: 20px;
       
   }
 
@@ -86,6 +89,7 @@ h1{
     text-align: right;
     font-size: 15px;
     margin-right: 150px;
+    margin-bottom: 40px;
     text-shadow: 1px 10px 45px;
 
       }
@@ -98,6 +102,8 @@ h1{
         border: 4px solid #ffffff;
         margin-left: 30px;
         margin-right: 30px;
+        margin-top: 15px;
+        margin-bottom: 15px;
         float: left;
 
 
@@ -122,7 +128,7 @@ h1{
 }
 
 li {
-    margin-left: 400px;
+    margin-left: 25%;
 }
 
 #vairak-par-zvaigznem {
@@ -162,12 +168,12 @@ footer {
 	}
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 1090px) {
     .navbutton2 {
       display: block;
-      margin-left: 10%;
-      margin-right: 10%;
-
+      margin-left: 30%;
+      margin-right: 30%;
+       
       }
 
 .navbutton2:hover {
@@ -181,6 +187,19 @@ footer {
 #vairak-par-zvaigznem {
     margin-left: 0;
     margin-right: 0;
+}
+
+#navigation {
+    text-align: left;
+
+}
+
+#poga-apraksts {
+    margin-right: 30%;
+}
+
+#poga-muzs {
+    margin-left: 30%;
 }
 
 }
