--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -169,12 +169,12 @@ footer {
 }
 
 @media screen and (max-width: 1090px) {
-    .navbutton2 {
+     .navbutton2 {
       display: block;
       margin-left: 15%;
       margin-right: 15%;
-       
-      }
+      font-size: 15px;
+     }
 
 .navbutton2:hover {
     transform: none;
@@ -202,4 +202,16 @@ footer {
     margin-left: 15%;
 }
 
+}
+
+@media screen and (max-width: 489px) {
+   body {
+       background-size: 100%;
+   }
+
+   .sadalu-bildes {
+    width: auto;
+    height: auto;
+   }
+   
 }
