--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -206,12 +206,13 @@ footer {
 
 @media screen and (max-width: 489px) {
    body {
-       background-size: 100%;
+    background-size: cover;
+    background-attachment:fixed;
    }
 
    .sadalu-bildes {
-    width: auto;
-    height: auto;
+    width: 50px;
+    height: 50px;
    }
    
 }
