--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -206,13 +206,13 @@ footer {
 
 @media screen and (max-width: 489px) {
    body {
-    background-size: cover;
-    background-attachment:fixed;
+    background-size: 100% 100%;
+    background-repeat: no-repeat
    }
 
    .sadalu-bildes {
-    width: 50px;
-    height: 50px;
+    width: 100px;
+    height: 100px;
    }
    
 }
