--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -173,7 +173,6 @@ footer {
       display: block;
       margin-left: 15%;
       margin-right: 15%;
-      font-size: 15px;
      }
 
 .navbutton2:hover {
@@ -211,7 +210,7 @@ footer {
    }
 
    .sadalu-bildes {
-    width: 100px;
+    width: auto;
     height: 100px;
    }
    
