--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -124,7 +124,6 @@ h1{
   padding-right: 30px;
   margin-left: 50px;
   margin-right: 50px;
-  
 }
 
 li {
@@ -149,9 +148,9 @@ footer {
 
 #img-uz-sakumu {
     height: 50px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 	transform: scale(1);
 	animation: pulse 1.5s infinite;
 }
@@ -179,7 +178,8 @@ footer {
     transform: none;
 
 }
-    #landing {
+
+#landing {
     height: 100%;
 }
 
@@ -205,13 +205,22 @@ footer {
 
 @media screen and (max-width: 489px) {
    body {
-    background-size: 100% 100%;
+    background-size: 100% auto;
     background-repeat: no-repeat
    }
 
    .sadalu-bildes {
-    width: auto;
+    width: 100px;
     height: 100px;
    }
+
+   .apakstemas {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+    
+  }
+  
    
 }
