--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -6,8 +6,6 @@ body {
     font-family: 'Libre Franklin', sans-serif;
     line-height: 1.8;
     color: white;
-
-
 }
 
 #landing {
@@ -16,9 +14,7 @@ body {
 
 #navigation {
     text-align: center;
-
 }
-
 
 .navbutton2 {
 	background-color: transparent;
@@ -37,7 +33,6 @@ body {
     cursor: pointer;
     transition: transform .2s;
     text-shadow: 10px  10px 45px;
-
 }
 
 .navbutton2:hover {
@@ -54,7 +49,6 @@ body {
 
 #vairak-info {
     font-size: 30px;
-
 }
 
 a#vairak-info:link {
@@ -80,7 +74,6 @@ h1{
       text-shadow: 1px 10px 45px;
       margin-right: 20px;
       margin-left: 20px;
-      
   }
 
   #autors {
@@ -91,7 +84,6 @@ h1{
     margin-right: 150px;
     margin-bottom: 40px;
     text-shadow: 1px 10px 45px;
-
       }
 
 .sadalu-bildes {
@@ -105,8 +97,6 @@ h1{
         margin-top: 15px;
         margin-bottom: 15px;
         float: left;
-
-
 }
 
 .hederi {
@@ -161,7 +151,6 @@ footer {
 		transform: scale(0.5);
 	}
 
-
 	100% {
 		transform: scale(0.95);
 	}
@@ -176,7 +165,6 @@ footer {
 
 .navbutton2:hover {
     transform: none;
-
 }
 
 #landing {
@@ -190,7 +178,6 @@ footer {
 
 #navigation {
     text-align: left;
-
 }
 
 #poga-apraksts {
@@ -200,12 +187,13 @@ footer {
 #poga-muzs {
     margin-left: 15%;
 }
-
 }
 
 @media screen and (max-width: 489px) {
    body {
     background-image: url("Images/stars2_mob_vers.jpg");
+    background-size: cover;
+    background-attachment: fixed;
    }
 
    .sadalu-bildes {
@@ -218,8 +206,5 @@ footer {
     padding-right: 15px;
     margin-left: 15px;
     margin-right: 15px;
-    
-  }
-  
-   
+   }  
 }
