--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -191,9 +191,7 @@ footer {
 
 @media screen and (max-width: 489px) {
    body {
-    background-image: url("Images/stars2_mob_vers.jpg");
-    background-size: cover;
-    background-attachment: fixed;
+    background-image: linear-gradient(#536976, #292E49);
    }
 
    .sadalu-bildes {
