--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -191,7 +191,10 @@ footer {
 
 @media screen and (max-width: 489px) {
    body {
-    background-image: linear-gradient(#536976, #292E49);
+    background-image: none;
+    background-color: linear-gradient(#536976, #292E49);
+    background-size: none;
+    background-attachment: none;
    }
 
    .sadalu-bildes {
