--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -190,7 +190,11 @@ footer {
 }
 
 @media screen and (max-width: 489px) {
-   .sadalu-bildes {
+body {
+	background-image: url("Images/stars2_mob_vers.jpg") !important;
+}
+	
+.sadalu-bildes {
     width: 100px;
     height: 100px;
    }
