--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -136,7 +136,7 @@ footer {
     margin-right: 30px;    
 }
 
-#img-uz-sakumu {
+.img-uz-sakumu {
     height: 50px;
     display: block;
     margin-left: auto;
