--- a/Styles/stylesheet.css
+++ b/Styles/stylesheet.css
@@ -191,6 +191,7 @@ footer {
 
 @media screen and (max-width: 489px) {
 body {
+	background-image: url("Images/stars2_mob_vers.jpg") !important;
 	background-size: 100% auto !important;
 }
 	
